# tempest

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  license.txt  readme.md
cmake/: toolchain_base.cmake  toolchain_gcc.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/blinky/: CMakeLists.txt  main.c
src/arch/: CMakeLists.txt
src/arch/arm/: CMakeLists.txt  nvic.h  systick.c  systick.h
src/board/lp_mspm0g3507/: CMakeLists.txt  blinky_led.c  board.c  led.c  startup.c
src/board/lp_mspm0g3507/assets/: default_linker_script.ld  openocd.cfg
src/board/lp_mspm0g3507/assets/host/linux/: 71-ti-permissions.rules
src/board/lp_mspm0g3507/assets/host/vscode/: launch.json
src/board/lp_mspm0g3507/include/board/: board.h  config.h  led.h
src/common/: compiler.h  mmio.h  types.h  util.h
src/drivers/: CMakeLists.txt  blinky.c  blinky.h
src/mcu/mspm0/: CMakeLists.txt  gpio.c  gpio.h  iomux.h
src/mcu/mspm0/g/: CMakeLists.txt
src/mcu/mspm0/g/3507/: CMakeLists.txt  default_linker_script.ld  default_startup.c  features.h
src/mcu/mspm0/g/3507/mcu_specific/: features.h  intvecs.h  iomux.h
src/mcu/mspm0/g/registers/: gpio.h  iomux.h
